Fix issue with the timeline title being truncated on mobile on the services page

--- a/src/sass/components/_timeline.scss
+++ b/src/sass/components/_timeline.scss
@@ -83,7 +83,7 @@
         translate: 0% -50%;
 
         &-title {
-            @include multiline-ellipsis-effect(2);
+            @include multiline-ellipsis-effect(6);
         }
 
         &-establishment {
